--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
             <button class="bg-green-800 px-6  rounded-xl text-white">2 copy</button>
         </div>
     </div>
+    <div class="my-4 py-6 bg-gradient-to-r from-green-900 via-green-700 to-green-900 flex flex-col items-center text-white">
+        <img src="./assets/logo.png" alt="" class="h-15 w-15 my-2">
+        <h2 class="text-3xl font-semibold  my-2">Emergency Service Directory</h2>
+        <p class="text-center text-lg my-2">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
+    </div>
 
 </body>
 </html>
