--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,23 +8,218 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <title>Document</title>
 </head>
-<body class="">
+
+<body class="bg-green-50">
     <div class="grid grid-cols-2 my-4 mx-8">
         <div class="flex ">
             <img src="./assets/logo.png" alt="" class="h-15 w-15">
             <h2 class="ml-3 text-2xl font-semibold text-green-800">Emergency <br> Service</h2>
         </div>
         <div class="flex justify-end gap-4">
-            <button class="bg-green-300 px-6  rounded-xl inline-flex items-center">0 <img src="./assets/heart.png" alt="" class="h-5 w-5 ml-2"></button>
-            <button class="bg-green-300 px-6  rounded-xl flex items-center">100 <img src="./assets/coin.png" alt="" class="h-5 w-5 ml-2"></button>
+            <button class="bg-green-300 px-6  rounded-xl inline-flex items-center">0 <img src="./assets/heart.png"
+                    alt="" class="h-5 w-5 ml-2"></button>
+            <button class="bg-green-300 px-6  rounded-xl flex items-center">100 <img src="./assets/coin.png" alt=""
+                    class="h-5 w-5 ml-2"></button>
             <button class="bg-green-800 px-6  rounded-xl text-white">2 copy</button>
         </div>
     </div>
-    <div class="my-4 py-6 bg-gradient-to-r from-green-900 via-green-700 to-green-900 flex flex-col items-center text-white">
+    <div
+        class="my-4 py-6 bg-gradient-to-r from-green-900 via-green-700 to-green-900 flex flex-col items-center text-white">
         <img src="./assets/logo.png" alt="" class="h-15 w-15 my-2">
         <h2 class="text-3xl font-semibold  my-2">Emergency Service Directory</h2>
-        <p class="text-center text-lg my-2">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
+        <p class="text-center text-lg my-2">Government Emergency Services at Your Fingertip – A Project by Government of
+            the People’s Republic of Bangladesh</p>
     </div>
-
+    <div class="flex my-4 mx-8 gap-4">
+        <div class="grid grid-cols-3 gap-6 my-4">
+            <div class="card rounded-md bg-white p-4 shadow-2xl">
+                <div class="flex justify-between mb-4">
+                    <img src="./assets/emergency.png" alt="" class="h-4 w-4">
+                    <i class="fas fa-heart ml-2"></i>
+                </div>
+                <p class="text-xl font-semibold my-2">National Emergency Number</p>
+                <p class="text-sm">National Emergency</p>
+                <p class="text-3xl my-2">999</p>
+                <button class=" bg-gray-300 rounded-md px-4 my-2">All</button>
+                <div class="grid grid-cols-2 gap-4">
+                    <button class="bg-white rounded-md border-2">
+                        <i class="fas fa-solid fa-copy"></i>
+                        <span>copy</span>
+                    </button>
+                    <button class="bg-green-600 rounded-md">
+                        <i class="fas fa-solid fa-phone rotate-180"></i>
+                        <span>call</span>
+                    </button>
+                </div>
+            </div>
+            <div class="card rounded-md bg-white p-4 shadow-2xl">
+                <div class="flex justify-between mb-4">
+                    <img src="./assets/police.png" alt="" class="h-8 w-8">
+                    <i class="fas fa-heart ml-2"></i>
+                </div>
+                <p class="text-xl font-semibold my-2">Police Helpline Number</p>
+                <p class="text-sm">Police</p>
+                <p class="text-3xl my-2">999</p>
+                <button class=" bg-gray-300 rounded-md px-4 my-2">Police</button>
+                <div class="grid grid-cols-2 gap-4">
+                    <button class="bg-white rounded-md border-2">
+                        <i class="fas fa-solid fa-copy"></i>
+                        <span>copy</span>
+                    </button>
+                    <button class="bg-green-600 rounded-md">
+                        <i class="fas fa-solid fa-phone rotate-180"></i>
+                        <span>call</span>
+                    </button>
+                </div>
+            </div>
+            <div class="card rounded-md bg-white p-4 shadow-2xl">
+                <div class="flex justify-between mb-4">
+                    <img src="./assets/fire-service.png" alt="" class="h-4 w-4">
+                    <i class="fas fa-heart ml-2"></i>
+                </div>
+                <p class="text-xl font-semibold my-2">Fire Service Number</p>
+                <p class="text-sm">Fire Service</p>
+                <p class="text-3xl my-2">999</p>
+                <button class=" bg-gray-300 rounded-md px-4 my-2">fire</button>
+                <div class="grid grid-cols-2 gap-4">
+                    <button class="bg-white rounded-md border-2">
+                        <i class="fas fa-solid fa-copy"></i>
+                        <span>copy</span>
+                    </button>
+                    <button class="bg-green-600 rounded-md">
+                        <i class="fas fa-solid fa-phone rotate-180"></i>
+                        <span>call</span>
+                    </button>
+                </div>
+            </div>
+            <div class="card rounded-md bg-white p-4 shadow-2xl">
+                <div class="flex justify-between mb-4">
+                    <img src="./assets/ambulance.png" alt="" class="h-4 w-4">
+                    <i class="fas fa-heart ml-2"></i>
+                </div>
+                <p class="text-xl font-semibold my-2">Ambulance Service</p>
+                <p class="text-sm">Ambulance</p>
+                <p class="text-3xl my-2">1994-999999</p>
+                <button class=" bg-gray-300 rounded-md px-4 my-2">Health</button>
+                <div class="grid grid-cols-2 gap-4">
+                    <button class="bg-white rounded-md border-2">
+                        <i class="fas fa-solid fa-copy"></i>
+                        <span>copy</span>
+                    </button>
+                    <button class="bg-green-600 rounded-md">
+                        <i class="fas fa-solid fa-phone rotate-180"></i>
+                        <span>call</span>
+                    </button>
+                </div>
+            </div>
+            <div class="card rounded-md bg-white p-4 shadow-2xl">
+                <div class="flex justify-between mb-4">
+                    <img src="./assets/emergency.png" alt="" class="h-4 w-4">
+                    <i class="fas fa-heart ml-2"></i>
+                </div>
+                <p class="text-xl font-semibold my-2">Women & Child Helpline</p>
+                <p class="text-sm">Women & Child Helpline</p>
+                <p class="text-3xl my-2">109</p>
+                <button class=" bg-gray-300 rounded-md px-4 my-2">Help</button>
+                <div class="grid grid-cols-2 gap-4">
+                    <button class="bg-white rounded-md border-2">
+                        <i class="fas fa-solid fa-copy"></i>
+                        <span>copy</span>
+                    </button>
+                    <button class="bg-green-600 rounded-md">
+                        <i class="fas fa-solid fa-phone rotate-180"></i>
+                        <span>call</span>
+                    </button>
+                </div>
+            </div>
+            <div class="card rounded-md bg-white p-4 shadow-2xl">
+                <div class="flex justify-between mb-4">
+                    <img src="./assets/emergency.png" alt="" class="h-4 w-4">
+                    <i class="fas fa-heart ml-2"></i>
+                </div>
+                <p class="text-xl font-semibold my-2">Anti-Corruption Helpline</p>
+                <p class="text-sm">Anti-Corruption</p>
+                <p class="text-3xl my-2">106</p>
+                <button class=" bg-gray-300 rounded-md px-4 my-2">Govt.</button>
+                <div class="grid grid-cols-2 gap-4">
+                    <button class="bg-white rounded-md border-2">
+                        <i class="fas fa-solid fa-copy"></i>
+                        <span>copy</span>
+                    </button>
+                    <button class="bg-green-600 rounded-md">
+                        <i class="fas fa-solid fa-phone rotate-180"></i>
+                        <span>call</span>
+                    </button>
+                </div>
+            </div>
+            <div class="card rounded-md bg-white p-4 shadow-2xl">
+                <div class="flex justify-between mb-4">
+                    <img src="./assets/emergency.png" alt="" class="h-4 w-4">
+                    <i class="fas fa-heart ml-2"></i>
+                </div>
+                <p class="text-xl font-semibold my-2">Electricity Helpline</p>
+                <p class="text-sm">Electricity</p>
+                <p class="text-3xl my-2">16216</p>
+                <button class=" bg-gray-300 rounded-md px-4 my-2">Electricity</button>
+                <div class="grid grid-cols-2 gap-4">
+                    <button class="bg-white rounded-md border-2">
+                        <i class="fas fa-solid fa-copy"></i>
+                        <span>copy</span>
+                    </button>
+                    <button class="bg-green-600 rounded-md">
+                        <i class="fas fa-solid fa-phone rotate-180"></i>
+                        <span>call</span>
+                    </button>
+                </div>
+            </div>
+            <div class="card rounded-md bg-white p-4 shadow-2xl">
+                <div class="flex justify-between mb-4">
+                    <img src="./assets/emergency.png" alt="" class="h-4 w-4">
+                    <i class="fas fa-heart ml-2"></i>
+                </div>
+                <p class="text-xl font-semibold my-2">Brac Helpline</p>
+                <p class="text-sm">Brac</p>
+                <p class="text-3xl my-2">16445</p>
+                <button class=" bg-gray-300 rounded-md px-4 my-2">NGO</button>
+                <div class="grid grid-cols-2 gap-4">
+                    <button class="bg-white rounded-md border-2">
+                        <i class="fas fa-solid fa-copy"></i>
+                        <span>copy</span>
+                    </button>
+                    <button class="bg-green-600 rounded-md">
+                        <i class="fas fa-solid fa-phone rotate-180"></i>
+                        <span>call</span>
+                    </button>
+                </div>
+            </div>
+            <div class="card rounded-md bg-white p-4 shadow-2xl">
+                <div class="flex justify-between mb-4">
+                    <img src="./assets/emergency.png" alt="" class="h-4 w-4">
+                    <i class="fas fa-heart ml-2"></i>
+                </div>
+                <p class="text-xl font-semibold my-2">Bangladesh Railway Helpline </p>
+                <p class="text-sm">Bangladesh Railway</p>
+                <p class="text-3xl my-2">163</p>
+                <button class=" bg-gray-300 rounded-md px-4 my-2">Travel</button>
+                <div class="grid grid-cols-2 gap-4">
+                    <button class="bg-white rounded-md border-2">
+                        <i class="fas fa-solid fa-copy"></i>
+                        <span>copy</span>
+                    </button>
+                    <button class="bg-green-600 rounded-md">
+                        <i class="fas fa-solid fa-phone rotate-180"></i>
+                        <span>call</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="border w-1/4 p-4 my-4 rounded-md">
+            <div class="flex justify-between">
+                <p>call history</p>
+                <button class="bg-green-800 text-white rounded-full px-4 py-2">clear</button>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
