--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h2 class="ml-3 text-2xl font-semibold text-green-800">Emergency <br> Service</h2>
         </div>
         <div class="flex justify-end gap-4">
-            <button class="bg-green-300 px-6  rounded-xl inline-flex items-center">0 <img src="./assets/heart.png"
+            <button class="bg-green-300 px-6  rounded-xl inline-flex items-center" > <span id="wish">0</span> <img src="./assets/heart.png"
                     alt="" class="h-5 w-5 ml-2"></button>
             <button class="bg-green-300 px-6  rounded-xl flex items-center">100 <img src="./assets/coin.png" alt=""
                     class="h-5 w-5 ml-2"></button>
@@ -35,7 +35,7 @@
             <div class="card rounded-md bg-white p-4 shadow-2xl">
                 <div class="flex justify-between mb-4">
                     <img src="./assets/emergency.png" alt="" class="h-4 w-4">
-                    <i class="fas fa-heart ml-2"></i>
+                    <i class="fas fa-heart ml-2 cursor-pointer" onclick="handle_wish()"></i>
                 </div>
                 <p class="text-xl font-semibold my-2">National Emergency Number</p>
                 <p class="text-sm">National Emergency</p>
@@ -55,7 +55,7 @@
             <div class="card rounded-md bg-white p-4 shadow-2xl">
                 <div class="flex justify-between mb-4">
                     <img src="./assets/police.png" alt="" class="h-8 w-8">
-                    <i class="fas fa-heart ml-2"></i>
+                    <i class="fas fa-heart ml-2 cursor-pointer" onclick="handle_wish()"></i>
                 </div>
                 <p class="text-xl font-semibold my-2">Police Helpline Number</p>
                 <p class="text-sm">Police</p>
@@ -75,7 +75,7 @@
             <div class="card rounded-md bg-white p-4 shadow-2xl">
                 <div class="flex justify-between mb-4">
                     <img src="./assets/fire-service.png" alt="" class="h-4 w-4">
-                    <i class="fas fa-heart ml-2"></i>
+                    <i class="fas fa-heart ml-2 cursor-pointer" onclick="handle_wish()"></i>
                 </div>
                 <p class="text-xl font-semibold my-2">Fire Service Number</p>
                 <p class="text-sm">Fire Service</p>
@@ -95,7 +95,7 @@
             <div class="card rounded-md bg-white p-4 shadow-2xl">
                 <div class="flex justify-between mb-4">
                     <img src="./assets/ambulance.png" alt="" class="h-4 w-4">
-                    <i class="fas fa-heart ml-2"></i>
+                    <i class="fas fa-heart ml-2 cursor-pointer" onclick="handle_wish()"></i>
                 </div>
                 <p class="text-xl font-semibold my-2">Ambulance Service</p>
                 <p class="text-sm">Ambulance</p>
@@ -115,7 +115,7 @@
             <div class="card rounded-md bg-white p-4 shadow-2xl">
                 <div class="flex justify-between mb-4">
                     <img src="./assets/emergency.png" alt="" class="h-4 w-4">
-                    <i class="fas fa-heart ml-2"></i>
+                    <i class="fas fa-heart ml-2 cursor-pointer" onclick="handle_wish()"></i>
                 </div>
                 <p class="text-xl font-semibold my-2">Women & Child Helpline</p>
                 <p class="text-sm">Women & Child Helpline</p>
@@ -135,7 +135,7 @@
             <div class="card rounded-md bg-white p-4 shadow-2xl">
                 <div class="flex justify-between mb-4">
                     <img src="./assets/emergency.png" alt="" class="h-4 w-4">
-                    <i class="fas fa-heart ml-2"></i>
+                    <i class="fas fa-heart ml-2 cursor-pointer" onclick="handle_wish()"></i>
                 </div>
                 <p class="text-xl font-semibold my-2">Anti-Corruption Helpline</p>
                 <p class="text-sm">Anti-Corruption</p>
@@ -155,7 +155,7 @@
             <div class="card rounded-md bg-white p-4 shadow-2xl">
                 <div class="flex justify-between mb-4">
                     <img src="./assets/emergency.png" alt="" class="h-4 w-4">
-                    <i class="fas fa-heart ml-2"></i>
+                    <i class="fas fa-heart ml-2 cursor-pointer" onclick="handle_wish()"></i>
                 </div>
                 <p class="text-xl font-semibold my-2">Electricity Helpline</p>
                 <p class="text-sm">Electricity</p>
@@ -175,7 +175,7 @@
             <div class="card rounded-md bg-white p-4 shadow-2xl">
                 <div class="flex justify-between mb-4">
                     <img src="./assets/emergency.png" alt="" class="h-4 w-4">
-                    <i class="fas fa-heart ml-2"></i>
+                    <i class="fas fa-heart ml-2 cursor-pointer" onclick="handle_wish()"></i>
                 </div>
                 <p class="text-xl font-semibold my-2">Brac Helpline</p>
                 <p class="text-sm">Brac</p>
@@ -195,7 +195,7 @@
             <div class="card rounded-md bg-white p-4 shadow-2xl">
                 <div class="flex justify-between mb-4">
                     <img src="./assets/emergency.png" alt="" class="h-4 w-4">
-                    <i class="fas fa-heart ml-2"></i>
+                    <i class="fas fa-heart ml-2 cursor-pointer" onclick="handle_wish()"></i>
                 </div>
                 <p class="text-xl font-semibold my-2">Bangladesh Railway Helpline </p>
                 <p class="text-sm">Bangladesh Railway</p>
@@ -213,13 +213,15 @@
                 </div>
             </div>
         </div>
-        <div class="border w-1/4 p-4 my-4 rounded-md">
+        <div class="shadow-2xl w-1/4 p-4 my-4 rounded-md bg-white">
             <div class="flex justify-between">
                 <p>call history</p>
                 <button class="bg-green-800 text-white rounded-full px-4 py-2">clear</button>
             </div>
         </div>
     </div>
+
+    <script src="script.js"></script> 
 </body>
 
 </html>
