--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="flex justify-end gap-4">
             <button class="bg-green-300 px-6  rounded-xl inline-flex items-center" > <span id="wish">0</span> <img src="./assets/heart.png"
                     alt="" class="h-5 w-5 ml-2"></button>
-            <button class="bg-green-300 px-6  rounded-xl flex items-center">100 <img src="./assets/coin.png" alt=""
+            <button class="bg-green-300 px-6  rounded-xl flex items-center" ><span id="coins">100</span> <img src="./assets/coin.png" alt=""
                     class="h-5 w-5 ml-2"></button>
             <button class="bg-green-800 px-6  rounded-xl text-white">2 copy</button>
         </div>
@@ -46,7 +46,7 @@
                         <i class="fas fa-solid fa-copy"></i>
                         <span>copy</span>
                     </button>
-                    <button class="bg-green-600 rounded-md">
+                    <button class="bg-green-600 rounded-md cursor-pointer" onclick="handle_call(this)">
                         <i class="fas fa-solid fa-phone rotate-180"></i>
                         <span>call</span>
                     </button>
@@ -54,19 +54,19 @@
             </div>
             <div class="card rounded-md bg-white p-4 shadow-2xl">
                 <div class="flex justify-between mb-4">
-                    <img src="./assets/police.png" alt="" class="h-8 w-8">
+                    <img src="./assets/police.png" alt="" class="h-4 w-4">
                     <i class="fas fa-heart ml-2 cursor-pointer" onclick="handle_wish()"></i>
                 </div>
                 <p class="text-xl font-semibold my-2">Police Helpline Number</p>
-                <p class="text-sm">Police</p>
-                <p class="text-3xl my-2">999</p>
+                <p class="text-sm service_name">Police</p>
+                <p class="text-3xl my-2 number">999</p>
                 <button class=" bg-gray-300 rounded-md px-4 my-2">Police</button>
                 <div class="grid grid-cols-2 gap-4">
                     <button class="bg-white rounded-md border-2">
                         <i class="fas fa-solid fa-copy"></i>
                         <span>copy</span>
                     </button>
-                    <button class="bg-green-600 rounded-md">
+                    <button class="bg-green-600 rounded-md call-btn">
                         <i class="fas fa-solid fa-phone rotate-180"></i>
                         <span>call</span>
                     </button>
@@ -213,10 +213,15 @@
                 </div>
             </div>
         </div>
-        <div class="shadow-2xl w-1/4 p-4 my-4 rounded-md bg-white">
-            <div class="flex justify-between">
-                <p>call history</p>
+        <div class="shadow-2xl w-1/3 p-4 my-4 rounded-md bg-white">
+            <div class="flex justify-between mb-2">
+                <p>
+                    <i class="fas fa-solid fa-clock mr-2"></i>
+                    Call History
+                </p>
                 <button class="bg-green-800 text-white rounded-full px-4 py-2">clear</button>
+            </div>
+            <div id="history">
             </div>
         </div>
     </div>
