--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <i class="fas fa-solid fa-copy"></i>
                         <span>copy</span>
                     </button>
-                    <button class="bg-green-600 rounded-md call-btn">
+                    <button class="bg-green-600 rounded-md cursor-pointer" onclick="handle_call(this)">
                         <i class="fas fa-solid fa-phone rotate-180"></i>
                         <span>call</span>
                     </button>
@@ -86,7 +86,7 @@
                         <i class="fas fa-solid fa-copy"></i>
                         <span>copy</span>
                     </button>
-                    <button class="bg-green-600 rounded-md">
+                    <button class="bg-green-600 rounded-md cursor-pointer" onclick="handle_call(this)">
                         <i class="fas fa-solid fa-phone rotate-180"></i>
                         <span>call</span>
                     </button>
@@ -106,7 +106,7 @@
                         <i class="fas fa-solid fa-copy"></i>
                         <span>copy</span>
                     </button>
-                    <button class="bg-green-600 rounded-md">
+                    <button class="bg-green-600 rounded-md cursor-pointer" onclick="handle_call(this)">
                         <i class="fas fa-solid fa-phone rotate-180"></i>
                         <span>call</span>
                     </button>
@@ -126,7 +126,7 @@
                         <i class="fas fa-solid fa-copy"></i>
                         <span>copy</span>
                     </button>
-                    <button class="bg-green-600 rounded-md">
+                    <button class="bg-green-600 rounded-md cursor-pointer" onclick="handle_call(this)">
                         <i class="fas fa-solid fa-phone rotate-180"></i>
                         <span>call</span>
                     </button>
@@ -146,7 +146,7 @@
                         <i class="fas fa-solid fa-copy"></i>
                         <span>copy</span>
                     </button>
-                    <button class="bg-green-600 rounded-md">
+                    <button class="bg-green-600 rounded-md cursor-pointer" onclick="handle_call(this)">
                         <i class="fas fa-solid fa-phone rotate-180"></i>
                         <span>call</span>
                     </button>
@@ -166,7 +166,7 @@
                         <i class="fas fa-solid fa-copy"></i>
                         <span>copy</span>
                     </button>
-                    <button class="bg-green-600 rounded-md">
+                    <button class="bg-green-600 rounded-md cursor-pointer" onclick="handle_call(this)">
                         <i class="fas fa-solid fa-phone rotate-180"></i>
                         <span>call</span>
                     </button>
@@ -186,7 +186,7 @@
                         <i class="fas fa-solid fa-copy"></i>
                         <span>copy</span>
                     </button>
-                    <button class="bg-green-600 rounded-md">
+                    <button class="bg-green-600 rounded-md cursor-pointer" onclick="handle_call(this)">
                         <i class="fas fa-solid fa-phone rotate-180"></i>
                         <span>call</span>
                     </button>
@@ -206,7 +206,7 @@
                         <i class="fas fa-solid fa-copy"></i>
                         <span>copy</span>
                     </button>
-                    <button class="bg-green-600 rounded-md">
+                    <button class="bg-green-600 rounded-md cursor-pointer" onclick="handle_call(this)">
                         <i class="fas fa-solid fa-phone rotate-180"></i>
                         <span>call</span>
                     </button>
@@ -219,7 +219,7 @@
                     <i class="fas fa-solid fa-clock mr-2"></i>
                     Call History
                 </p>
-                <button class="bg-green-800 text-white rounded-full px-4 py-2">clear</button>
+                <button class="bg-green-800 text-white rounded-full px-4 py-2 cursor-pointer" onclick="clear_history()">clear</button>
             </div>
             <div id="history">
             </div>
