--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     alt="" class="h-5 w-5 ml-2"></button>
             <button class="bg-green-300 px-6  rounded-xl flex items-center" ><span id="coins">100</span> <img src="./assets/coin.png" alt=""
                     class="h-5 w-5 ml-2"></button>
-            <button class="bg-green-800 px-6  rounded-xl text-white">2 copy</button>
+            <button class="bg-green-800 px-6  rounded-xl text-white"><span id="copy_count">0</span> copy</button>
         </div>
     </div>
     <div
@@ -42,7 +42,7 @@
                 <p class="text-3xl my-2">999</p>
                 <button class=" bg-gray-300 rounded-md px-4 my-2">All</button>
                 <div class="grid grid-cols-2 gap-4">
-                    <button class="bg-white rounded-md border-2">
+                    <button class="bg-white rounded-md border-2 cursor-pointer" onclick="handle_copy(this)">
                         <i class="fas fa-solid fa-copy"></i>
                         <span>copy</span>
                     </button>
@@ -62,7 +62,7 @@
                 <p class="text-3xl my-2 number">999</p>
                 <button class=" bg-gray-300 rounded-md px-4 my-2">Police</button>
                 <div class="grid grid-cols-2 gap-4">
-                    <button class="bg-white rounded-md border-2">
+                    <button class="bg-white rounded-md border-2 cursor-pointer" onclick="handle_copy(this)">
                         <i class="fas fa-solid fa-copy"></i>
                         <span>copy</span>
                     </button>
@@ -82,7 +82,7 @@
                 <p class="text-3xl my-2">999</p>
                 <button class=" bg-gray-300 rounded-md px-4 my-2">fire</button>
                 <div class="grid grid-cols-2 gap-4">
-                    <button class="bg-white rounded-md border-2">
+                    <button class="bg-white rounded-md border-2 cursor-pointer" onclick="handle_copy(this)">
                         <i class="fas fa-solid fa-copy"></i>
                         <span>copy</span>
                     </button>
@@ -102,7 +102,7 @@
                 <p class="text-3xl my-2">1994-999999</p>
                 <button class=" bg-gray-300 rounded-md px-4 my-2">Health</button>
                 <div class="grid grid-cols-2 gap-4">
-                    <button class="bg-white rounded-md border-2">
+                    <button class="bg-white rounded-md border-2 cursor-pointer" onclick="handle_copy(this)">
                         <i class="fas fa-solid fa-copy"></i>
                         <span>copy</span>
                     </button>
@@ -122,7 +122,7 @@
                 <p class="text-3xl my-2">109</p>
                 <button class=" bg-gray-300 rounded-md px-4 my-2">Help</button>
                 <div class="grid grid-cols-2 gap-4">
-                    <button class="bg-white rounded-md border-2">
+                    <button class="bg-white rounded-md border-2 cursor-pointer" onclick="handle_copy(this)">
                         <i class="fas fa-solid fa-copy"></i>
                         <span>copy</span>
                     </button>
@@ -142,7 +142,7 @@
                 <p class="text-3xl my-2">106</p>
                 <button class=" bg-gray-300 rounded-md px-4 my-2">Govt.</button>
                 <div class="grid grid-cols-2 gap-4">
-                    <button class="bg-white rounded-md border-2">
+                    <button class="bg-white rounded-md border-2 cursor-pointer" onclick="handle_copy(this)">
                         <i class="fas fa-solid fa-copy"></i>
                         <span>copy</span>
                     </button>
@@ -162,7 +162,7 @@
                 <p class="text-3xl my-2">16216</p>
                 <button class=" bg-gray-300 rounded-md px-4 my-2">Electricity</button>
                 <div class="grid grid-cols-2 gap-4">
-                    <button class="bg-white rounded-md border-2">
+                    <button class="bg-white rounded-md border-2 cursor-pointer" onclick="handle_copy(this)">
                         <i class="fas fa-solid fa-copy"></i>
                         <span>copy</span>
                     </button>
@@ -182,7 +182,7 @@
                 <p class="text-3xl my-2">16445</p>
                 <button class=" bg-gray-300 rounded-md px-4 my-2">NGO</button>
                 <div class="grid grid-cols-2 gap-4">
-                    <button class="bg-white rounded-md border-2">
+                    <button class="bg-white rounded-md border-2 cursor-pointer" onclick="handle_copy(this)">
                         <i class="fas fa-solid fa-copy"></i>
                         <span>copy</span>
                     </button>
@@ -202,7 +202,7 @@
                 <p class="text-3xl my-2">163</p>
                 <button class=" bg-gray-300 rounded-md px-4 my-2">Travel</button>
                 <div class="grid grid-cols-2 gap-4">
-                    <button class="bg-white rounded-md border-2">
+                    <button class="bg-white rounded-md border-2 cursor-pointer" onclick="handle_copy(this)">
                         <i class="fas fa-solid fa-copy"></i>
                         <span>copy</span>
                     </button>
