--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 </head>
 
 <body class="bg-green-50">
-    <div class="grid grid-cols-2 my-4 mx-8">
+    <div class="flex justify-between my-4 mx-8 ">
         <div class="flex ">
             <img src="./assets/logo.png" alt="" class="h-15 w-15">
             <h2 class="ml-3 text-2xl font-semibold text-green-800">Emergency <br> Service</h2>
         </div>
-        <div class="flex justify-end gap-4">
-            <button class="bg-green-300 px-6  rounded-xl inline-flex items-center" > <span id="wish">0</span> <img src="./assets/heart.png"
+        <div class="flex justify-end gap-4 py-4">
+            <button class="bg-green-300 px-6  rounded-xl flex items-center" > <span id="wish">0</span> <img src="./assets/heart.png"
                     alt="" class="h-5 w-5 ml-2"></button>
             <button class="bg-green-300 px-6  rounded-xl flex items-center" ><span id="coins">100</span> <img src="./assets/coin.png" alt=""
                     class="h-5 w-5 ml-2"></button>
