--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="bg-green-50">
-    <div class="flex justify-between my-4 mx-8 ">
+    <div class="flex-col lg:flex justify-between my-4 mx-8 ">
         <div class="flex ">
             <img src="./assets/logo.png" alt="" class="h-15 w-15">
             <h2 class="ml-3 text-2xl font-semibold text-green-800">Emergency <br> Service</h2>
@@ -30,8 +30,8 @@
         <p class="text-center text-lg my-2">Government Emergency Services at Your Fingertip – A Project by Government of
             the People’s Republic of Bangladesh</p>
     </div>
-    <div class="flex my-4 mx-8 gap-4">
-        <div class="grid grid-cols-3 gap-6 my-4">
+    <div class="flex-col lg:flex  my-4 mx-8 gap-4">
+        <div class="grid grid-cols-1 lg:grid-cols-3 gap-6 my-4">
             <div class="card rounded-md bg-white p-4 shadow-2xl">
                 <div class="flex justify-between mb-4">
                     <img src="./assets/emergency.png" alt="" class="h-4 w-4">
@@ -213,7 +213,7 @@
                 </div>
             </div>
         </div>
-        <div class="shadow-2xl w-1/3 p-4 my-4 rounded-md bg-white">
+        <div class="shadow-2xl w-full lg:w-1/3 p-4 my-4 rounded-md bg-white">
             <div class="flex justify-between mb-2">
                 <p>
                     <i class="fas fa-solid fa-clock mr-2"></i>
