--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="bg-green-50">
-    <div class="flex-col lg:flex justify-between my-4 mx-8 ">
+    <div class="flex flex-col lg:flex-row justify-between my-4 mx-8 ">
         <div class="flex ">
             <img src="./assets/logo.png" alt="" class="h-15 w-15">
             <h2 class="ml-3 text-2xl font-semibold text-green-800">Emergency <br> Service</h2>
@@ -30,7 +30,7 @@
         <p class="text-center text-lg my-2">Government Emergency Services at Your Fingertip – A Project by Government of
             the People’s Republic of Bangladesh</p>
     </div>
-    <div class="flex-col lg:flex  my-4 mx-8 gap-4">
+    <div class=" flex flex-col lg:flex-row my-4 mx-8 gap-4">
         <div class="grid grid-cols-1 lg:grid-cols-3 gap-6 my-4">
             <div class="card rounded-md bg-white p-4 shadow-2xl">
                 <div class="flex justify-between mb-4">
@@ -225,7 +225,6 @@
             </div>
         </div>
     </div>
-
     <script src="script.js"></script> 
 </body>
 
