responsive bug fix

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="bg-green-50">
-    <div class="flex flex-col lg:flex-row justify-between my-4 mx-8 ">
+    <div class="flex flex-col lg:flex-row items-center lg:justify-between my-4 mx-8 ">
         <div class="flex ">
             <img src="./assets/logo.png" alt="" class="h-15 w-15">
             <h2 class="ml-3 text-2xl font-semibold text-green-800">Emergency <br> Service</h2>
